# comp-dec-modal

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.coq.local  README  README.md  _CoqProject  coq-comp-dec-modal.opam  dune  dune-project  index.html  meta.yml
.github/workflows/: coq-action.yml  docker-action.yml
CPDL/: PDL_def.v
CTL/: CTL_def.v  Makefile  _CoqProject  agreement.v  dags.v  demo.v  gen_dec.v  gen_def.v  gen_hsound.v  gen_ref.v  hilbert.v  hilbert_Eme90.v  hilbert_LS.v  hilbert_hist.v  hilbert_ref.v  refpred.v  relaxed_pruning.v  results.v
K/: K_def.v  Makefile  _CoqProject  demo.v  depend  gentzen.v  hilbert_ref.v  results.v  universal_model.v
Kstar/: Kstar_def.v  Makefile  _CoqProject  demo.v  gen_def.v  gen_ref.v  hilbert_ref.v  results.v
PDL/: PDL_def.v  demo.v  hilbert_ref.v
docs/v1.0/coqdoc/: CompDecModal.CPDL.PDL_def.html  CompDecModal.CPDL.demo.html  CompDecModal.CPDL.hilbert_ref.html  CompDecModal.CTL.CTL_def.html  CompDecModal.CTL.agreement.html  CompDecModal.CTL.dags.html  CompDecModal.CTL.demo.html  CompDecModal.CTL.gen_dec.html  CompDecModal.CTL.gen_def.html  CompDecModal.CTL.gen_hsound.html  CompDecModal.CTL.gen_ref.html  CompDecModal.CTL.hilbert.html  CompDecModal.CTL.hilbert_Eme90.html  CompDecModal.CTL.hilbert_LS.html  CompDecModal.CTL.hilbert_hist.html  CompDecModal.CTL.hilbert_ref.html  CompDecModal.CTL.relaxed_pruning.html  CompDecModal.CTL.results.html  CompDecModal.K.K_def.html  CompDecModal.K.demo.html  CompDecModal.K.gentzen.html  CompDecModal.K.hilbert_ref.html  CompDecModal.K.results.html  CompDecModal.K.universal_model.html  CompDecModal.Kstar.Kstar_def.html  CompDecModal.Kstar.demo.html  CompDecModal.Kstar.gen_def.html  CompDecModal.Kstar.gen_ref.html  CompDecModal.Kstar.hilbert_ref.html  CompDecModal.Kstar.results.html  CompDecModal.PDL.PDL_def.html  CompDecModal.PDL.demo.html  CompDecModal.PDL.hilbert_ref.html  CompDecModal.libs.base.html  CompDecModal.libs.bcase.html  CompDecModal.libs.edone.html  CompDecModal.libs.fset.html  CompDecModal.libs.fset_tac.html  CompDecModal.libs.induced_sym.html  CompDecModal.libs.modular_hilbert.html  (+4 more)
libs/: base.v  bcase.v  fset.v  fset_tac.v  induced_sym.v
resources/: coqdoc.css  footer.html  header.html  toc.patch
theories/: dune
theories/CPDL/: PDL_def.v  demo.v  hilbert_ref.v
theories/CTL/: CTL_def.v  agreement.v  dags.v  demo.v  gen_dec.v  gen_def.v  gen_hsound.v  gen_ref.v  hilbert.v  hilbert_Eme90.v  hilbert_LS.v  hilbert_hist.v  hilbert_ref.v  relaxed_pruning.v  results.v
theories/K/: K_def.v  demo.v  gentzen.v  hilbert_ref.v  universal_model.v
theories/Kstar/: Kstar_def.v  demo.v  depend  gen_def.v  gen_ref.v  hilbert_ref.v
theories/PDL/: PDL_def.v  demo.v  hilbert_ref.v
theories/libs/: base.v  edone.v  fset.v  fset_tac.v  induced_sym.v  modular_hilbert.v  rewrite_inequality.v  sltype.v
website/: index.html  pslab.css
