(coq.theory
 (name CompDecModal)
 (package coq-comp-dec-modal)
 (synopsis "Constructive proofs of soundness and completeness for K, K*, CTL, PDL, and PDL with converse")
 (flags -w -projection-no-head-constant -w -notation-overridden -w -redundant-canonical-projection -w -notation-incompatible-format))

(include_subdirs qualified)
